--- a/Dices/app/src/main/res/layout/activity_main.xml
+++ b/Dices/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="156dp"
         android:backgroundTint="#FFC107"
         android:text="@string/d20"
         android:textColor="#6A1B9A"
@@ -54,17 +54,18 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textNumDado"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/black_ops_one"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="96sp"
+        android:text="@string/dices_rolls"
+        android:textColor="#FFC107"
+        android:textSize="52sp"
         app:layout_constraintBottom_toTopOf="@+id/butaoD6"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="1" />
+        app:layout_constraintVertical_bias="0.412" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
