--- a/ToDo/app/src/main/res/layout/fragment_form01.xml
+++ b/ToDo/app/src/main/res/layout/fragment_form01.xml
@@ -23,7 +23,7 @@
         android:autofillHints="" />
 
     <EditText
-        android:id="@+id/editDescicao"
+        android:id="@+id/editDescricao"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
@@ -52,7 +52,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editDescicao"
+        app:layout_constraintTop_toBottomOf="@+id/editDescricao"
         tools:text="Responsavel"
         android:autofillHints="" />
 
